# MarketReviewApp

./: Documentations.docx  README.md  pyproject.toml  raw_data.json
src/product_review_app/: crew.py  main.py
src/product_review_app/config/: agents.yaml  tasks.yaml
src/product_review_app/tools/: custom_tool.py
