[project]
name = "product_review_app"
version = "0.1.0"
description = "product_review_app using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
product_review_app = "product_review_app.main:run"
run_crew = "product_review_app.main:run"
train = "product_review_app.main:train"
replay = "product_review_app.main:replay"
test = "product_review_app.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
